--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
   "server": "nodemon server.js",
-  "start": "node server.js",
-  "build": "npm run build"
+  "start": "node server.js"
 },
   "keywords": [],
   "author": "",
